Update Java and add a test project